fix: 🐛 caption for wikitable should be aligned to center

--- a/resources/skins.citizen.styles/skinning/content.tables.less
+++ b/resources/skins.citizen.styles/skinning/content.tables.less
@@ -18,7 +18,7 @@
 		padding-left: var( --space-sm );
 		color: var( --color-base--emphasized );
 		font-weight: var( --font-weight-semibold );
-		text-align: start;
+		text-align: center;
 	}
 
 	th {
